account module fixes to microservice architecture