@@ -1,97 +1,62 @@
 package finance_mate.core.account.service;
 
-import com.financemate.account.dto.AccountDto;
-import com.financemate.account.dto.AccountResponse;
-import com.financemate.account.dto.BalanceResponse;
-import com.financemate.account.dto.CurrencyResponse;
-import com.financemate.account.exception.AccessException;
-import com.financemate.account.exception.AccountNotFoundException;
-import com.financemate.account.exception.CurrencyNotFoundException;
-import com.financemate.account.exception.IllegalOperationException;
-import com.financemate.account.model.Account;
-import com.financemate.account.model.Currency;
-import com.financemate.account.repository.AccountRepository;
-import com.financemate.account.repository.CurrencyRepository;
-import com.financemate.account.repository.ExchangeRateRepository;
-import com.financemate.auth.model.user.User;
+import finance_mate.core.account.exception.AccessException;
+import finance_mate.core.account.exception.AccountNotFoundException;
+import finance_mate.core.account.exception.CurrencyNotFoundException;
+import finance_mate.core.account.exception.IllegalOperationException;
+import finance_mate.core.account.model.Account;
+import finance_mate.core.account.model.Currency;
+import finance_mate.core.account.model.dto.AccountDto;
+import finance_mate.core.account.model.dto.AccountResponse;
+import finance_mate.core.account.model.dto.BalanceResponse;
+import finance_mate.core.account.repository.AccountRepository;
+import finance_mate.core.account.repository.CurrencyRepository;
+import finance_mate.core.account.repository.ExchangeRateRepository;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class StandardAccountService implements AccountService {
 
     private final AccountRepository accountRepository;
     private final CurrencyRepository currencyRepository;
     private final ExchangeRateRepository exchangeRateRepository;
 
-    public StandardAccountService(AccountRepository accountRepository,
-                                  CurrencyRepository currencyRepository,
-                                  ExchangeRateRepository exchangeRateRepository) {
-        this.exchangeRateRepository = exchangeRateRepository;
-        this.currencyRepository = currencyRepository;
-        this.accountRepository = accountRepository;
-    }
-
     @Override
-    public List<AccountResponse> getAccountForUser(User user) {
-        List<Account> accounts = accountRepository.findAllByUserId(user);
-        return accounts.stream().map(account -> new AccountResponse(
-                account.getId(),
-                account.getName(),
-                account.getDescription(),
-                round(account.getBalance()),
-                account.getColor(),
-                account.isIncludeInStats(),
-                account.isArchived(),
-                new CurrencyResponse(
-                        account.getCurrencyCode().getCode(),
-                        account.getCurrencyCode().getName(),
-                        account.getCurrencyCode().getSymbol()
-                )
-        )).toList();
+    public List<AccountResponse> getAccountForUser(String userId) {
+        List<Account> accounts = accountRepository.findAllByUserId(userId);
+        return accounts.stream().map(this::mapAccountToDto).collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public AccountResponse createAccount(AccountDto dto, User user) {
+    public AccountResponse createAccount(AccountDto dto, String userId) {
         Currency currency = currencyRepository.findById(dto.currencyCode())
                 .orElseThrow(() -> new CurrencyNotFoundException("Currency not found"));
 
         Account account = new Account();
         account.setName(dto.name());
         account.setDescription(dto.description());
-        account.setCurrencyCode(currency);
+//        account.setCurrencyCode(currency);
         account.setBalance(dto.balance());
         account.setColor(dto.color());
-        account.setUserId(user);
+        account.setUserId(userId);
         account.setIncludeInStats(true);
         account.setArchived(false);
 
-        Account save = accountRepository.save(account);
-        return new AccountResponse(
-                save.getId(),
-                save.getName(),
-                save.getDescription(),
-                save.getBalance(),
-                save.getColor(),
-                save.isIncludeInStats(),
-                save.isArchived(),
-                new CurrencyResponse(
-                        save.getCurrencyCode().getCode(),
-                        save.getCurrencyCode().getName(),
-                        save.getCurrencyCode().getSymbol()
-                )
-        );
+        return mapAccountToDto(accountRepository.save(account));
     }
 
     @Override
     @Transactional
-    public AccountResponse updateAccount(String accountId, AccountDto dto, User user) {
+    public AccountResponse updateAccount(String accountId, AccountDto dto, String userId) {
         Account account = accountRepository.findById(accountId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-        if (!account.getUserId().getId().equals(user.getId())) {
+        if (!account.getUserId().equals(userId)) {
             throw new AccessException("Account does not belong to user");
         }
 
@@ -99,74 +64,49 @@ public class StandardAccountService implements AccountService {
             throw new IllegalOperationException("Balance cannot be changed directly");
         }
 
-        if (!Objects.equals(account.getCurrencyCode().getCode(), dto.currencyCode())) {
-            throw new IllegalOperationException("Currency cannot be changed");
-        }
+//        if (!Objects.equals(account.getCurrencyCode().getCode(), dto.currencyCode())) {
+//            throw new IllegalOperationException("Currency cannot be changed");
+//        }
 
         Currency currency = currencyRepository.findById(dto.currencyCode())
                 .orElseThrow(() -> new CurrencyNotFoundException("Currency not found"));
 
         account.setName(dto.name());
         account.setDescription(dto.description());
-        account.setCurrencyCode(currency);
+//        account.setCurrencyCode(currency);
         account.setBalance(dto.balance());
         account.setColor(dto.color());
         Account save = accountRepository.save(account);
 
-        return new AccountResponse(
-                save.getId(),
-                save.getName(),
-                save.getDescription(),
-                save.getBalance(),
-                save.getColor(),
-                save.isIncludeInStats(),
-                save.isArchived(),
-                new CurrencyResponse(
-                        save.getCurrencyCode().getCode(),
-                        save.getCurrencyCode().getName(),
-                        save.getCurrencyCode().getSymbol()
-                )
-        );
+        return mapAccountToDto(save);
     }
 
     @Override
     @Transactional
-    public void deleteAccount(String accountId, User user) {
+    public void deleteAccount(String accountId, String userId) {
+        //TODO TRANSACTIONS ALSO NEED TO BE DELETED AFTER THAT
         Account account = accountRepository.findById(accountId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-        if (!account.getUserId().getId().equals(user.getId())) {
+        if (!account.getUserId().equals(userId)) {
             throw new AccessException("Account does not belong to user");
         }
         accountRepository.delete(account);
     }
 
     @Override
-    public AccountResponse getAccountById(String accountId, User user) {
+    public AccountResponse getAccountById(String accountId, String userId) {
         Account account = accountRepository.findById(accountId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-        if (!account.getUserId().getId().equals(user.getId())) {
+        if (!account.getUserId().equals(userId)) {
             throw new AccessException("Account does not belong to user");
         }
 
-        return new AccountResponse(
-                account.getId(),
-                account.getName(),
-                account.getDescription(),
-                round(account.getBalance()),
-                account.getColor(),
-                account.isIncludeInStats(),
-                account.isArchived(),
-                new CurrencyResponse(
-                        account.getCurrencyCode().getCode(),
-                        account.getCurrencyCode().getName(),
-                        account.getCurrencyCode().getSymbol()
-                )
-        );
+        return mapAccountToDto(account);
     }
 
     @Override
     @Transactional
-    public void archiveAccount(String accountId, User user) {
+    public void archiveAccount(String accountId, String userId) {
         Account account = accountRepository.findById(accountId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-        if (!account.getUserId().getId().equals(user.getId())) {
+        if (!account.getUserId().equals(userId)) {
             throw new AccessException("Account does not belong to user");
         }
         account.setArchived(!account.isArchived());
@@ -175,9 +115,9 @@ public class StandardAccountService implements AccountService {
 
     @Override
     @Transactional
-    public void includeInStats(String accountId, User user) {
+    public void includeInStats(String accountId, String userId) {
         Account account = accountRepository.findById(accountId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-        if (!account.getUserId().getId().equals(user.getId())) {
+        if (!account.getUserId().equals(userId)) {
             throw new AccessException("Account does not belong to user");
         }
         account.setIncludeInStats(!account.isIncludeInStats());
@@ -185,9 +125,9 @@ public class StandardAccountService implements AccountService {
     }
 
     @Override
-    public void changeBalance(String accountId, double amount, User user) {
+    public void changeBalance(String accountId, double amount, String userId) {
         Account account = accountRepository.findById(accountId).orElseThrow(() -> new AccountNotFoundException("Account not found"));
-        if (!account.getUserId().getId().equals(user.getId())) {
+        if (!account.getUserId().equals(userId)) {
             throw new AccessException("Account does not belong to user");
         }
         account.setBalance(account.getBalance() + amount);
@@ -196,7 +136,7 @@ public class StandardAccountService implements AccountService {
 
     @Override
     @Transactional
-    public void transferBetweenAccounts(String fromAccountId, String toAccountId, double amount, User user) {
+    public void transferBetweenAccounts(String fromAccountId, String toAccountId, double amount, String userId) {
         if (fromAccountId.equals(toAccountId)) {
             throw new IllegalOperationException("Cannot transfer to the same account");
         }
@@ -205,7 +145,7 @@ public class StandardAccountService implements AccountService {
         Account toAccount = accountRepository.findById(toAccountId).orElseThrow(()
                 -> new AccountNotFoundException("Destination account not found"));
 
-        if (!fromAccount.getUserId().getId().equals(user.getId()) || !toAccount.getUserId().getId().equals(user.getId())) {
+        if (!fromAccount.getUserId().equals(userId) || !toAccount.getUserId().equals(userId)) {
             throw new AccessException("One or both accounts do not belong to user");
         }
 
@@ -213,16 +153,16 @@ public class StandardAccountService implements AccountService {
             throw new IllegalOperationException("Insufficient funds in source account");
         }
 
-        double finalAmount;
-        if (!fromAccount.getCurrencyCode().equals(toAccount.getCurrencyCode())) {
-            Currency currencyCode = toAccount.getCurrencyCode();
-            double rate = exchangeRateRepository.findByFromCurrencyAndToCurrency(fromAccount.getCurrencyCode().getCode(), currencyCode.getCode())
-                    .orElseThrow(() -> new CurrencyNotFoundException("Exchange rate not found"))
-                    .getRate();
-            finalAmount = amount * rate;
-        } else {
-            finalAmount = amount;
-        }
+        double finalAmount = amount;
+//        if (!fromAccount.getCurrencyCode().equals(toAccount.getCurrencyCode())) {
+//            Currency currencyCode = toAccount.getCurrencyCode();
+//            double rate = exchangeRateRepository.findByFromCurrencyAndToCurrency(fromAccount.getCurrencyCode().getCode(), currencyCode.getCode())
+//                    .orElseThrow(() -> new CurrencyNotFoundException("Exchange rate not found"))
+//                    .getRate();
+//            finalAmount = amount * rate;
+//        } else {
+//            finalAmount = amount;
+//        }
 
         fromAccount.setBalance(fromAccount.getBalance() - amount);
         toAccount.setBalance(toAccount.getBalance() + finalAmount);
@@ -231,26 +171,39 @@ public class StandardAccountService implements AccountService {
     }
 
     @Override
-    public BalanceResponse getUserBalance(User user) {
-        Currency mainCurrency = user.getMainCurrency();
-        List<Account> accounts = accountRepository.findAllByUserIdAndIncludeInStatsIsTrue(user);
-        double result = accounts.stream()
-                .mapToDouble(account -> {
-                    if (account.getCurrencyCode().getCode().equals(mainCurrency.getCode())) {
-                        return account.getBalance();
-                    } else {
-                        double rate = exchangeRateRepository.findByFromCurrencyAndToCurrency(account.getCurrencyCode().getCode(), mainCurrency.getCode())
-                                .orElseThrow(() -> new CurrencyNotFoundException("Exchange rate not found"))
-                                .getRate();
-                        return account.getBalance() * rate;
-                    }
-                })
-                .sum();
-        return new BalanceResponse(round(result), mainCurrency.getSymbol());
+    public BalanceResponse getUserBalance(String userId) {
+//        Currency mainCurrency = user.getMainCurrency();
+        List<Account> accounts = accountRepository.findAllByUserIdAndIncludeInStatsIsTrue(userId);
+        double result = accounts.stream().mapToDouble(Account::getBalance).sum();
+//        double result = accounts.stream()
+//                .mapToDouble(account -> {
+//                    if (account.getCurrencyCode().getCode().equals(mainCurrency.getCode())) {
+//                        return account.getBalance();
+//                    } else {
+//                        double rate = exchangeRateRepository.findByFromCurrencyAndToCurrency(account.getCurrencyCode().getCode(), mainCurrency.getCode())
+//                                .orElseThrow(() -> new CurrencyNotFoundException("Exchange rate not found"))
+//                                .getRate();
+//                        return account.getBalance() * rate;
+//                    }
+//                })
+//                .sum();
+//        return new BalanceResponse(round(result), mainCurrency.getSymbol());
+        return new BalanceResponse(round(result), "zł");
     }
 
     private double round(double value) {
         return Math.round(value * 100.0) / 100.0;
     }
 
+    private AccountResponse mapAccountToDto(Account account) {
+        return AccountResponse.builder()
+                .id(account.getId())
+                .name(account.getName())
+                .balance(account.getBalance())
+                .description(account.getDescription())
+                .color(account.getColor())
+                .includeInStats(account.isIncludeInStats())
+                .archived(account.isArchived())
+                .build();
+    }
 }
